[tool.poetry]
name = "swiss-army-man"
version = "0.1.0"
description = ""
authors = ["Brett Shollenberger <brettshollenberger@Bretts-MacBook-Pro-2.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
